# complutensian-texts

./: .gitignore  Project.toml  README.md  genesis_1.1.cex  genesis_1.10.cex  genesis_1.2.cex  genesis_1.3.cex  genesis_1.4.cex  genesis_1.5.cex  genesis_1.6.cex  genesis_1.7.cex  genesis_1.8.cex  genesis_1.9.cex  h2.cex  isaiah_65.15.cex  notes.md  phonepush.txt  publishnbs.sh
cex-editions/: lxxglosses-freqs.tsv  lxxglosses-verbs.txt  lxxglosses-vocab.txt  lxxglosses.cex  targum_latin_genesis_norm.cex
codex/: bne_v1.cex  bne_v2.cex  bne_v3.cex  bne_v4.cex  bne_v5.cex  bne_v6.cex
config/: catalog.cex  citation.cex
dashboards/: index.html
data/: 1kings.cex  1samuel.cex  2chronicles.cex  2samuel.cex  amos.cex  ecclesiastes.cex  esther.cex  exodus.cex  ezra.cex  genesis.cex  habakkuk.cex  hosea.cex  incipits.cex  isaiah.cex  jeremiah.cex  job.cex  joel.cex  lamentations.cex  leviticus.cex  malachi.cex  micah.cex  nahum.cex  navigation.cex  numbers.cex  obadiah.cex  psalms.cex
docs/: index.html  pagereader.html  readglosses-paged.html  readglosses.html  test2.html  verbalignments.html  viewdf.html
dse/: septuagint_latin_dse.cex  septuagint_latin_genesis_dse.cex  targum_latin_dse.cex  targum_latin_genesis_dse.cex
editions/: prolog-to-Ezra.md  septuagint_genesis.xml  septuagint_latin_genesis.xml  targum_latin_genesis.xml  v1_prolog.md
iiif/: complutensian-bne-manifest.json  complutensian-bne-v1-manifest.json  complutensian-bne-v2-manifest.json  complutensian-bne-v3-manifest.json  (+3 more)
marimo-project/: .gitignore  README.md  pyproject.toml
marimo-project/notebooks/: alignments.py  alignreader.py  browseimages.py  dsebrowser--quarry.py  dsebrowser.py  forcegraph.py  importcex.py  keyedaligns.py  lemmsearch.py  netviz.py  pagereader.py  readglosses-paged.py  readglosses.py  test2.py  testalignwidget.py  testloading.py  testpub.py  teststate.py  tidyup.py  vocabalignments.py
marimo-project/notebooks/public/: genesis-verbs-numbered.cex  septuagint_latin_genesis_dipl.cex  targum_latin_genesis_dipl.cex
marimo-project/public/: genesis-verbs-numbered.cex
marimo-project/src/complutensian/: __init__.py  alignments.py  diff.py  graph.py  textloading.py
marimo-project/tests/: test_textloading.py
marimo/complutensian/: pyproject.toml
marimo/complutensian/notebooks/: alignments.py  lemmsearch.py  logical.py  sanitizedata.py  simple_search.py  testcex.py
marimo/complutensian/public/: genesis-verbs-numbered.cex  header.cex  testdelim.cex
marimo/complutensian/src/: aligments.py  textloading.py
(+260 files in other folders)
