[project]
name = "complutensian"
version = "0.0.1"
description = "Use marimo to search the texts of the Complutensian Bible"

dependencies = [
    "marimo",
    "urn_citation>=0.7.3",
    "citable_corpus>=0.2.0",
    "requests>=2.32.0",
    "polars>=1.38.1",
    "networkx",
    "plotly>=6.5.2",
]
requires-python = ">=3.13.7"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/complutensian"]

[tool.marimo]
# Optional: Configure marimo specific settings
# layout_file = "layouts.json"

# This tells uv to treat the current directory as a package
[dependency-groups]
dev = [
    "pytest",
    "ruff",
]
