[project]
name = "complutensian"
version = "0.1.0"
description = "Use marimo to search the texts of the Complutensian Bible"

dependencies = [
    "marimo"
]
requires-python = ">=3.14"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.marimo]
# Optional: Configure marimo specific settings
# layout_file = "layouts.json"