[project]
name = "complutensian"
version = "0.0.1"
description = "Use marimo to search the texts of the Complutensian Bible"

dependencies = [
    "marimo",
    "urn_citation",
    "citable_corpus"
]
requires-python = ">=3.14"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

#[tool.hatch.build.targets.wheel]
#packages = ["src"]

[tool.marimo]
# Optional: Configure marimo specific settings
# layout_file = "layouts.json"

# This tells uv to treat the current directory as a package
[tool.uv]
dev-dependencies = [
    "pytest",
    "ruff",
]